<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:text="@string/label_welcome"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/white2" />

    <Button
        android:id="@+id/btnCreateAppointment"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:text="@string/btn_create_appointment"
        style="@style/MenuButton"
        app:icon="@drawable/ic_add_circle"/>

    <Button
        android:id="@+id/btnMyAppointments"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:text="@string/btn_my_appointments"
        style="@style/MenuButton"
        app:icon="@drawable/ic_schedule_24"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:text="@string/btn_log_out"
        style="@style/MenuButton"
        app:icon="@drawable/ic_power_off" />



</LinearLayout>